moved auth-openapi to user-openapi
